Update project - division into package seller and customer

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,5 @@ logging.level.dailyfarm.accounting=DEBUG
 logging.level.org.springframework.security=DEBUG
 logging.level.org.hibernate.SQL=DEBUG
 
+jwt.secret=SggJs3XxDifUEolSC7TQBx9sRPnPCxMi4fl5UcX7cgI=
+jwt.expiration=86400000
